--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "backend",
-  "version": "1.0.50",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
-  },
-  "dependencies": {
-    "elysia": "latest"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^2.3.11",
-    "bun-types": "latest"
-  },
-  "module": "src/index.js"
+	"name": "backend",
+	"version": "1.0.50",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "bun --watch src/index.ts",
+		"check": "biome check .",
+		"typecheck": "tsc --noEmit"
+	},
+	"dependencies": {
+		"elysia": "^1.0.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.3.11",
+		"typescript": "^5.3.0",
+		"@types/bun": "latest"
+	},
+	"module": "src/index.ts"
 }
