--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,8 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.11",
-		"typescript": "^5.3.0",
-		"@types/bun": "latest"
+		"@types/bun": "latest",
+		"typescript": "^5.3.0"
 	},
 	"module": "src/index.ts"
 }
