--- a/backend/biome.json
+++ b/backend/biome.json
@@ -1,45 +1,45 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
 
-	"vcs": {
-		"enabled": true,
-		"clientKind": "git",
-		"useIgnoreFile": true
-	},
+  "vcs": {
+    "enabled": true,
+    "clientKind": "git",
+    "useIgnoreFile": true
+  },
 
-	"files": {
-		"ignoreUnknown": true
-	},
+  "files": {
+    "ignoreUnknown": true
+  },
 
-	"formatter": {
-		"enabled": true,
-		"indentStyle": "tab"
-	},
+  "formatter": {
+    "enabled": true,
+    "indentStyle": "space"
+  },
 
-	"linter": {
-		"enabled": true,
-		"rules": {
-			"recommended": true,
-			"correctness": {
-				"noUnusedImports": "error",
-				"noUnusedVariables": "error"
-			}
-		}
-	},
+  "linter": {
+    "enabled": true,
+    "rules": {
+      "recommended": true,
+      "correctness": {
+        "noUnusedImports": "error",
+        "noUnusedVariables": "error"
+      }
+    }
+  },
 
-	"javascript": {
-		"formatter": {
-			"quoteStyle": "double"
-		},
-		"globals": ["Bun"]
-	},
+  "javascript": {
+    "formatter": {
+      "quoteStyle": "double"
+    },
+    "globals": ["Bun"]
+  },
 
-	"assist": {
-		"enabled": true,
-		"actions": {
-			"source": {
-				"organizeImports": "on"
-			}
-		}
-	}
+  "assist": {
+    "enabled": true,
+    "actions": {
+      "source": {
+        "organizeImports": "on"
+      }
+    }
+  }
 }
