--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,22 @@
 {
-	"name": "backend",
-	"version": "1.0.50",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"dev": "bun --watch src/index.ts",
-		"check": "biome check .",
-		"typecheck": "tsc --noEmit"
-	},
-	"dependencies": {
-		"elysia": "^1.0.0"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "^2.3.11",
-		"@types/bun": "latest",
-		"typescript": "^5.3.0"
-	},
-	"module": "src/index.ts"
+  "name": "backend",
+  "version": "1.0.50",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "bun --watch src/index.ts",
+    "check": "biome check .",
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "elysia": "^1.0.0",
+    "pino": "^10.1.1"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.3.11",
+    "@types/bun": "latest",
+    "pino-pretty": "^13.1.3",
+    "typescript": "^5.3.0"
+  },
+  "module": "src/index.ts"
 }
