--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
-  "dependencies": {},
+  "private": true,
   "devDependencies": {
-    "husky": "^9.1.7"
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7"
   },
   "scripts": {
     "prepare": "husky"
+  },
+  "lint-staged": {
+    "backend/**/*.{ts,js,json}": [
+      "bunx biome check --write",
+      "bunx biome check"
+    ]
   }
 }
