--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,6 @@
 NODE_ENV=development
 PORT=8000
 LOG_LEVEL=debug
-
+DATABASE_URL=<ADD DB CONNECTION STRING>
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=http://localhost:8000 # Base URL of your app
