--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@prisma/client": "^7.2.0",
+    "better-auth": "^1.4.12",
     "elysia": "^1.0.0",
     "pino": "^10.1.1"
   },
@@ -16,6 +18,7 @@
     "@biomejs/biome": "^2.3.11",
     "@types/bun": "latest",
     "pino-pretty": "^13.1.3",
+    "prisma": "^7.2.0",
     "typescript": "^5.3.0"
   },
   "module": "src/index.ts"
