--- a/backend/package.json
+++ b/backend/package.json
@@ -9,16 +9,19 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@prisma/client": "^7.2.0",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "better-auth": "^1.4.12",
     "elysia": "^1.0.0",
+    "pg": "^8.17.2",
     "pino": "^10.1.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
     "@types/bun": "latest",
+    "@types/pg": "^8.16.0",
     "pino-pretty": "^13.1.3",
-    "prisma": "^7.2.0",
+    "prisma": "7.3.0",
     "typescript": "^5.3.0"
   },
   "module": "src/index.ts"
