--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "private": true,
   "devDependencies": {
+    "@tanstack/router-cli": "^1.157.16",
+    "@tanstack/router-vite-plugin": "^1.157.16",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7"
   },
@@ -12,5 +14,10 @@
       "bunx biome check --write",
       "bunx biome check"
     ]
+  },
+  "dependencies": {
+    "@tanstack/react-query": "^5.90.20",
+    "@tanstack/react-router": "^1.157.16",
+    "@tanstack/react-router-devtools": "^1.157.16"
   }
 }
