--- a/backend/biome.json
+++ b/backend/biome.json
@@ -1,21 +1,17 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
-
+  "$schema": "https://biomejs.dev/schemas/latest/schema.json",
   "vcs": {
     "enabled": true,
     "clientKind": "git",
     "useIgnoreFile": true
   },
-
   "files": {
     "ignoreUnknown": true
   },
-
   "formatter": {
     "enabled": true,
     "indentStyle": "space"
   },
-
   "linter": {
     "enabled": true,
     "rules": {
@@ -26,14 +22,14 @@
       }
     }
   },
-
   "javascript": {
     "formatter": {
       "quoteStyle": "double"
     },
-    "globals": ["Bun"]
+    "globals": [
+      "Bun"
+    ]
   },
-
   "assist": {
     "enabled": true,
     "actions": {
