fix: update Husky pre-commit hook to modern format
- Remove deprecated _.husky.sh calls
- Use npx --no -- for lint-staged execution
- Add GitHub workflows to lint-staged configuration
- Fix Husky v10 deprecation warning

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "backend/**/*.{ts,js,json}": [
       "bunx biome check --write",
       "bunx biome check"
+    ],
+    ".github/**/*.yml": [
+      "bunx biome check --write",
+      "bunx biome check"
     ]
   },
   "dependencies": {
