--- a/backend/biome.json
+++ b/backend/biome.json
@@ -6,7 +6,8 @@
     "useIgnoreFile": false
   },
   "files": {
-    "ignoreUnknown": true
+    "ignoreUnknown": true,
+    "maxSize": 10485760
   },
   "formatter": {
     "enabled": true,
@@ -19,6 +20,9 @@
       "correctness": {
         "noUnusedImports": "error",
         "noUnusedVariables": "error"
+      },
+      "style": {
+        "noNonNullAssertion": "off"
       }
     }
   },
@@ -26,9 +30,7 @@
     "formatter": {
       "quoteStyle": "double"
     },
-    "globals": [
-      "Bun"
-    ]
+    "globals": ["Bun"]
   },
   "assist": {
     "enabled": true,
