--- a/backend/biome.json
+++ b/backend/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "maxSize": 10485760
+    "includes": ["src/**"]
   },
   "formatter": {
     "enabled": true,
@@ -23,6 +23,9 @@
       },
       "style": {
         "noNonNullAssertion": "off"
+      },
+      "suspicious": {
+        "noExplicitAny": "off"
       }
     }
   },
