--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -4,11 +4,19 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'backend/**'
+      - 'src/**'
+      - 'prisma/**'
+      - 'package.json'
+      - 'bun.lock'
+      - 'tsconfig.json'
   pull_request:
     branches: [ main ]
     paths:
-      - 'backend/**'
+      - 'src/**'
+      - 'prisma/**'
+      - 'package.json'
+      - 'bun.lock'
+      - 'tsconfig.json'
 
 jobs:
   backend-ci:
@@ -42,48 +50,40 @@ jobs:
       uses: actions/cache@v4
       with:
         path: |
-          backend/node_modules
-          backend/.bun
+          node_modules
+          .bun
           ~/.bun/install/cache
-          backend/prisma/generated
-        key: ${{ runner.os }}-bun-${{ hashFiles('backend/bun.lock', 'backend/package.json', 'backend/tsconfig.json') }}
+          prisma/generated
+        key: ${{ runner.os }}-bun-${{ hashFiles('bun.lock', 'package.json', 'tsconfig.json') }}
         restore-keys: |
           ${{ runner.os }}-bun-
 
     - name: Install dependencies
-      working-directory: ./backend
       run: bun install
 
     - name: Generate Prisma client
-      working-directory: ./backend
       run: bunx prisma generate
       env:
         DATABASE_URL: postgresql://postgres:1234@localhost:5432/test_db
 
     - name: Code quality check (Biome)
-      working-directory: ./backend
       run: bun run check
 
     - name: Type checking
-      working-directory: ./backend
       run: bun run typecheck
 
     - name: Run database migrations
-      working-directory: ./backend
       run: bunx prisma migrate deploy
       env:
         DATABASE_URL: postgresql://postgres:1234@localhost:5432/test_db
 
     - name: Security audit
-      working-directory: ./backend
       run: bun audit
 
     - name: Build application
-      working-directory: ./backend
       run: bun run build
 
     - name: Build verification
-      working-directory: ./backend
       run: |
         # Verify the built application can start without errors
         timeout 10s bun dist/index.js || true
@@ -94,6 +94,6 @@ jobs:
       with:
         name: backend-build-artifacts
         path: |
-          backend/dist/
-          backend/prisma/generated/
+          dist/
+          prisma/generated/
         retention-days: 7
