--- a/package.json
+++ b/package.json
@@ -1,31 +1,45 @@
 {
+  "name": "form-engine-backend",
+  "version": "1.0.50",
   "private": true,
-  "devDependencies": {
-    "@tanstack/router-cli": "^1.157.16",
-    "@tanstack/router-vite-plugin": "^1.157.16",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.2.7"
-  },
+  "type": "module",
   "scripts": {
+    "dev": "bun --watch src/index.ts",
+    "check": "biome check .",
+    "typecheck": "tsc --noEmit",
+    "build": "bun build src/index.ts --outdir dist --target bun --minify",
     "prepare": "husky"
   },
+  "dependencies": {
+    "@elysiajs/cors": "^1.4.1",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
+    "better-auth": "^1.4.18",
+    "elysia": "^1.4.22",
+    "pg": "^8.18.0",
+    "pino": "^10.3.0"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.3.14",
+    "@types/bun": "latest",
+    "@types/pg": "^8.16.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "pino-pretty": "^13.1.3",
+    "prisma": "^7.3.0",
+    "typescript": "^5.9.3"
+  },
   "lint-staged": {
-    "backend/**/*.{ts,js,json}": [
+    "**/*.{ts,js,json}": [
       "bunx biome check --write --no-errors-on-unmatched"
     ],
-    "frontend/**/*.{ts,tsx,js,jsx,json}": [
-      "bunx biome format --write",
-      "bunx biome check --no-errors-on-unmatched --linter-enabled=false"
-    ],
     ".github/**/*.yml": [
-      "bunx biome format --write",
-      "bunx biome check --no-errors-on-unmatched"
+      "bunx biome check --write --no-errors-on-unmatched"
     ]
   },
-  "dependencies": {
-    "@biomejs/biome": "^2.3.14",
-    "@tanstack/react-query": "^5.90.20",
-    "@tanstack/react-router": "^1.157.16",
-    "@tanstack/react-router-devtools": "^1.157.16"
-  }
+  "resolutions": {
+    "hono": "^4.11.7",
+    "lodash": "^4.17.23"
+  },
+  "module": "src/index.ts"
 }
