--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@prisma/client": "^7.3.0",
     "better-auth": "^1.4.18",
     "elysia": "^1.4.22",
+    "nodemailer": "^8.0.0",
     "pg": "^8.18.0",
     "pino": "^10.3.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.14",
     "@types/bun": "latest",
+    "@types/nodemailer": "^7.0.9",
     "@types/pg": "^8.16.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
