--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "check": "biome check .",
     "typecheck": "tsc --noEmit",
     "build": "bun build src/index.ts --outdir dist --target bun --minify",
+    "postinstall": "prisma generate",
     "prepare": "husky"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.4.1",
-    "@prisma/adapter-pg": "^7.3.0",
-    "@prisma/client": "^7.3.0",
+    "@prisma/adapter-pg": "^6.18.0",
+    "@prisma/client": "^6.18.0",
     "better-auth": "^1.4.18",
     "elysia": "^1.4.22",
     "pg": "^8.18.0",
@@ -26,7 +27,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "pino-pretty": "^13.1.3",
-    "prisma": "^7.3.0",
+    "prisma": "^6.18.0",
     "typescript": "^5.9.3"
   },
   "lint-staged": {
