--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "bun --watch src/index.ts",
     "check": "biome check .",
     "typecheck": "tsc --noEmit",
+    "test": "bun test",
     "build": "bun build src/index.ts --outdir dist --target bun --minify",
     "prepare": "husky"
   },
