--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,17 @@
+# Environment
 NODE_ENV=development
+
+# Server
 PORT=8000
 LOG_LEVEL=debug
-DATABASE_URL=<ADD DB CONNECTION STRING>
-BETTER_AUTH_SECRET=
-BETTER_AUTH_URL=http://localhost:8000 # Base URL of your app
+
+# Database
+DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DATABASE
+
+# Better Auth
+BETTER_AUTH_SECRET=your-secret-key-here
+BETTER_AUTH_URL=http://localhost:8000
+
+# OAuth (Google)
+GOOGLE_CLIENT_ID=your-client-id-here
+GOOGLE_CLIENT_SECRET=yout-client-secret-here
