--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,20 +1,42 @@
-# Dependencies
+# Node and Bun dependencies
 node_modules/
 
-# Build outputs
+# Build and distribution output
 dist/
 build/
+out/
+coverage/
 
 # Environment variables
 .env
 .env.*
+!.env.example
 
-# Logs
+# Log files
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Coverage
-coverage/
+# IDE and editor files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
 
-# Temporary files
+# OS-generated files
+.DS_Store
+Thumbs.db
+
+# Temporary and generated files
 *.tmp
 *.temp
+*.pem
+*.trace
+*.zip
+*.tar.gz
+*.tgz
+count.txt
+/src/generated/prisma
