--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "form-engine-backend",
   "version": "1.0.50",
   "private": true,
   "type": "module",
@@ -7,7 +7,9 @@
     "dev": "bun --watch src/index.ts",
     "check": "biome check .",
     "typecheck": "tsc --noEmit",
-    "build": "bun build src/index.ts --outdir dist --target bun --minify"
+    "build": "bun build src/index.ts --outdir dist --target bun --minify",
+    "db:push": "prisma db push",
+    "prepare": "husky"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.4.1",
@@ -15,16 +17,28 @@
     "@prisma/client": "^7.3.0",
     "better-auth": "^1.4.18",
     "elysia": "^1.4.22",
+    "nodemailer": "^8.0.0",
     "pg": "^8.18.0",
     "pino": "^10.3.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.13",
+    "@biomejs/biome": "^2.3.14",
     "@types/bun": "latest",
+    "@types/nodemailer": "^7.0.9",
     "@types/pg": "^8.16.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "pino-pretty": "^13.1.3",
     "prisma": "^7.3.0",
     "typescript": "^5.9.3"
+  },
+  "lint-staged": {
+    "**/*.{ts,js,json}": [
+      "bunx biome check --write --no-errors-on-unmatched"
+    ],
+    ".github/**/*.yml": [
+      "bunx biome check --write --no-errors-on-unmatched"
+    ]
   },
   "resolutions": {
     "hono": "^4.11.7",
